Fix for #49.  Menu clipping.

--- a/public/hobothemes/aura/stylesheets/aura.css
+++ b/public/hobothemes/aura/stylesheets/aura.css
@@ -51,7 +51,7 @@ body > .content.section.with-flash {
   top: 30px;
   z-index: 2;
   padding-bottom: 10px;
-  width: 100%;
+  min-width: 100px;
   -moz-border-radius-bottomleft: 10px;
   -moz-border-radius-bottomright: 10px;
   -webkit-border-bottom-left-radius: 10px;
